2002-07-14  Wakaba <w@suika.fam.cx>

	* Text.pm: 
	- (default_charset): Removed.
	- (body_default_charset): New option.
	- (body_default_charset_input): Likewise.
	- (parse, stringify): Use new options instead of default_charset
	option.
	* TextPlain.pm (_init): Set 1 to fill_ct option
	when format =~ rfc2822 | news-usefor (in addition to
	http | mime).

2002-07-08  Wakaba <w@suika.fam.cx>

	* MessageDeliveryStatus.pm: New module.

2002-07-02  Wakaba <w@suika.fam.cx>

	* Multipart.pm:
	- (parse): Call Message::Util::decide_newline.
	- (data_part, control_part): New methods.
	- (stringify): Set 'protocol' parameter of parent entity
	if media type is message/signed or message/encrypted.

2002-06-23  wakaba <w@suika.fam.cx>

	* TextPlain.pm (stringify): Minimumize MIME charset name
	(bug fix).

2002-06-16  wakaba <w@suika.fam.cx>

	* Text.pm, TextPlain.pm (_init): Bug fix of normalization
	option (was not worked).

2002-06-14  wakaba <w@suika.fam.cx>

	* MessageExternalBody.pm: New module.

2002-06-11  wakaba <w@suika.fam.cx>

	* Multipart.pm: Some bug fixes.

2002-06-10  wakaba <w@suika.fam.cx>

	* Multipart.pm (add, delete, count, item): Supported.

2002-06-09  wakaba <w@suika.fam.cx>

	* Multipart.pm: New module.
	* Text.pm (stringify): Don't append "\x0D\x0A" unless it
	when normalization.
	* TextPlain.pm (stringify): 
	- Minimumlizes mime charset name (if fill_ct).
	- Don't append "\x0D\x0A" unless it when normalization.

2002-06-01  wakaba <w@suika.fam.cx>

	* TextPlain.pm: Reimplemented with parent class
	Message::Field::Structured.

2002-03-21  wakaba <w@suika.fam.cx>

	* ChangeLog: New file.
	
	* TextPlain.pm: New module.