@@ -8,7 +8,7 @@ Message::Body::TextPlain --- Perl Module for Internet Media Type "text/plain"
 package Message::Body::TextPlain;
 use strict;
 use vars qw(%DEFAULT @ISA $VERSION);
-$VERSION=do{my @r=(q$Revision: 1.10 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
+$VERSION=do{my @r=(q$Revision: 1.11 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
 
 require Message::Body::Text;
 push @ISA, qw(Message::Body::Text);
@@ -16,7 +16,7 @@ push @ISA, qw(Message::Body::Text);
 %DEFAULT = (
   -_METHODS	=> [qw|value|],
   -_MEMBERS	=> [qw|_charset|],
-  -body_default_charset	=> 'us-ascii',
+  -body_default_charset	=> 'iso-2022-int-1',
   -body_default_charset_input	=> 'iso-2022-int-1',
   #encoding_after_encode
   #encoding_before_decode
@@ -151,7 +151,8 @@ sub stringify ($;%) {
       $ct->replace (Message::MIME::Charset::name_minimumize ($option{body_default_charset}, $e{value}));
     } elsif ($option{fill_ct}) {
       $ct = $self->{header}->field ('content-type');
-      $ct->value ($option{media_type}.'/'.$option{media_subtype});
+      $ct->media_type_major ($option{media_type});
+      $ct->media_type_minor ($option{media_subtype});
       $ct->replace (Message::MIME::Charset::name_minimumize ($option{body_default_charset}, $e{value}));
     }
   }
@@ -188,7 +189,7 @@ Boston, MA 02111-1307, USA.
 =head1 CHANGE
 
 See F<ChangeLog>.
-$Date: 2002/07/17 00:33:29 $
+$Date: 2002/07/19 11:49:23 $
 
 =cut
 
