@@ -1,3 +1,7 @@
+2002-07-19  Wakaba <w@suika.fam.cx>
+
+	* TextMessageRFC934.pm: New module.
+
 2002-07-14  Wakaba <w@suika.fam.cx>
 
 	* Text.pm: 
